k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: buildmaterials
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
